--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'test/**/*.spec.ts'"
   },
-  "author": "",
+  "author": "farruco.sanjurjo@gmail.com",
   "license": "ISC",
   "devDependencies": {
     "@contentful/tslint-config-backend": "^1.0.0",
+    "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.7",
+    "@types/sinon": "^7.0.13",
+    "@types/sinon-chai": "^3.2.2",
+    "chai": "^4.2.0",
     "mocha": "^6.2.0",
+    "sinon": "^7.3.2",
+    "sinon-chai": "^3.3.0",
+    "source-map-support": "^0.5.13",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   }
