--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha 'test/**/*.spec.ts'"
+    "test": "mocha 'test/**/*.spec.ts'",
+    "clean": "rimraf built",
+    "build": "npm run clean && tsc -p ."
   },
   "author": "farruco.sanjurjo@gmail.com",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "@types/sinon-chai": "^3.2.2",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
+    "rimraf": "^2.6.3",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
     "source-map-support": "^0.5.13",
