--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "source-map-support": "^0.5.13",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "@types/uuid": "^3.4.5",
+    "uuid": "^3.3.2"
   }
 }
