--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "@hapi/joi": "^15.1.1",
+    "@types/hapi__joi": "^15.0.3",
     "@types/uuid": "^3.4.5",
     "uuid": "^3.3.2"
   }
