--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@hapi/joi": "^15.1.1",
     "@types/hapi__joi": "^15.0.3",
     "@types/uuid": "^3.4.5",
-    "uuid": "^3.3.2"
+    "@types/ws": "^6.0.3",
+    "uuid": "^3.3.2",
+    "ws": "^7.1.2"
   }
 }
