--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
+    "@types/bunyan": "^1.8.6",
     "@types/hapi__joi": "^15.0.3",
     "@types/uuid": "^3.4.5",
     "@types/ws": "^6.0.3",
+    "bunyan": "^1.8.12",
     "uuid": "^3.3.2",
     "ws": "^7.1.2"
   }
