--- a/package.json
+++ b/package.json
@@ -14,22 +14,29 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.2.2",
+    "@types/js-yaml": "^3.12.1",
     "@types/mocha": "^5.2.7",
+    "@types/mustache": "^3.2.0",
     "@types/sinon": "^7.0.13",
     "@types/sinon-chai": "^3.2.2",
+    "@types/traverse": "^0.6.32",
     "chai": "^4.2.0",
+    "js-yaml": "^3.13.1",
     "mocha": "^6.2.0",
+    "mustache": "^3.2.1",
     "rimraf": "^2.6.3",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
     "source-map-support": "^0.5.13",
+    "traverse": "^0.6.6",
     "ts-node": "^8.3.0",
     "tslint": "^5.20.1",
     "tslint-config-standard": "^9.0.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-no-unused-expression-chai": "^0.1.4",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "yargs": "^15.1.0"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
