--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/js-yaml": "^3.12.1",
     "@types/mocha": "^5.2.7",
     "@types/mustache": "^3.2.0",
+    "@types/set-value": "^2.0.0",
     "@types/sinon": "^7.0.13",
     "@types/sinon-chai": "^3.2.2",
     "@types/traverse": "^0.6.32",
@@ -45,6 +46,7 @@
     "@types/uuid": "^3.4.5",
     "@types/ws": "^6.0.3",
     "bunyan": "^1.8.12",
+    "set-value": "^3.0.1",
     "uuid": "^3.3.2",
     "ws": "^7.1.2"
   }
