Rename env variables for player and shot speed

--- a/ops/kubeconfigs/game-engine-deployment.yml
+++ b/ops/kubeconfigs/game-engine-deployment.yml
@@ -18,7 +18,7 @@ spec:
           env:
             - name: AUTO_START_GAME
               value: 'true'
-            - name: MOVEMENT_SPEED
+            - name: PLAYER_MOVEMENT_SPEED
               value: '5'
           ports:
             - name: ws-control
