Setup to have SSL in front of the game-engine

--- a/ops/kubeconfig_templates/game-engine-deployment.yml
+++ b/ops/kubeconfig_templates/game-engine-deployment.yml
@@ -15,6 +15,13 @@ spec:
       containers:
       - name: game-engine
         image: gcr.io/{{ProjectId}}/game-engine:{{ImageTag}}
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8888
+          failureThreshold: 1
+          initialDelaySeconds: 5
+          periodSeconds: 10
         env:
         - name: AUTO_START_GAME
           value: "true"
@@ -41,8 +48,6 @@ spec:
         - name: TOKENS_INCREASE_FACTOR
           value: "2"
         ports:
-          - name: ws-control
+          - name: ws-port
             containerPort: 8888
-          - name: ws-player
-            containerPort: 8889
 
