Deploy new version of the game engine

--- a/ops/kubeconfig_templates/game-engine-deployment.yml
+++ b/ops/kubeconfig_templates/game-engine-deployment.yml
@@ -22,6 +22,8 @@ spec:
           value: "5"
         - name: TURBO_MULTIPLIER_FACTOR
           value: "2"
+        - name: MAX_PLAYERS_PER_GAME
+          value: "5"
         - name: MOVEMENT_SPEED_PLAYER
           value: "6"
         - name: MOVEMENT_SPEED_SHOT
