--- a/ops/kubeconfigs/game-engine-service.yml
+++ b/ops/kubeconfigs/game-engine-service.yml
@@ -1,7 +1,16 @@
+apiVersion: cloud.google.com/v1beta1
+kind: BackendConfig
+metadata:
+  name: game-engine-backend-config
+spec:
+  timeoutSec: 86400
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: game-engine
+  annotations:
+    beta.cloud.google.com/backend-config: '{"ports": {"8888":"game-engine-backend-config"}}'
 spec:
   type: NodePort
   selector:
