Replace TSLint with ESLint

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test-debug": "mocha --inspect-brk 'test/**/*.spec.ts'",
     "clean": "rimraf built",
     "build": "npm run clean && tsc -p .",
-    "lint": "tslint -p tsconfig.json -c tslint.js"
+    "lint": "eslint 'src/**/*.ts' 'test/**/*.ts'"
   },
   "author": "farruco.sanjurjo@gmail.com",
   "license": "ISC",
@@ -21,7 +21,14 @@
     "@types/sinon": "^7.0.13",
     "@types/sinon-chai": "^3.2.2",
     "@types/traverse": "^0.6.32",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "js-yaml": "^3.13.1",
     "mocha": "^6.2.0",
     "mustache": "^3.2.1",
@@ -31,11 +38,6 @@
     "source-map-support": "^0.5.13",
     "traverse": "^0.6.6",
     "ts-node": "^8.3.0",
-    "tslint": "^5.20.1",
-    "tslint-config-standard": "^9.0.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-microsoft-contrib": "^6.2.0",
-    "tslint-no-unused-expression-chai": "^0.1.4",
     "typescript": "^3.5.3",
     "yargs": "^15.1.0"
   },
